[package]
name = "bevy_noti_box"
version = "0.0.3"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-noti-box"
keywords = ["bevy"]
description = "Bevy plugin for notification"
exclude = ["assets", "examples", "tests", ".cargo"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.16", features = [
    "bevy_text",
    "bevy_ui",
    "bevy_color",
], default-features = false }

[dev-dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
